# LxD_Machine

./: .gitignore  CLAUDE.md  check.sh  cleanup.sh  config.m4mini.yaml  config.openai.yaml  config.yaml  pixi.toml  pyproject.toml
.claude/: settings.json
.claude/memory/: MEMORY.md  feedback_env_file.md  feedback_mandatory_features.md  project_embedding_migration.md  project_knowledge_graph.md  project_lxd_overview.md  project_mcp_server.md  project_relation_extraction.md
.claude/plans/: virtual-wibbling-wand.md
.claude/rules/: project-conventions.md  python-style.md  testing.md
Plans/: 00_PURPOSE_AND_BACKGROUND.md  01_ARCHITECTURE.md  01b_CODEBASE_STRUCTURE.md  02_DATA_SCHEMA.md  02b_CONFIG_SPEC.md  02c_ENTITY_EXTRACTION.md  03_INGEST_SPEC.md  04_QUERY_SPEC.md  05_MCP_SPEC.md  06_BUILD_PLAN.md  07_USER_GUIDE.md  08_KNOWLEDGE_GRAPH_SPEC.md
Yamls/: ontology.yaml
Yamls/ai_config/: analyzer_catalog.yaml  analyzer_orchestration_config.yaml  analyzers_catalog.yaml  extraction_rules_config.yaml  slide_analyzers_catalog.yaml  surface_patterns_config.yaml
Yamls/corpus/: constructive_RST_corpus.yaml  content_map_corpus.yaml  course_structure_hierarchy_corpus.yaml  descriptive_RST_corpus.yaml  learning_design_corpus.yaml  presentation_design_principles_corpus.yaml
Yamls/entities/: Descriptive_RST_entities.yaml  accessibility_entities.yaml  activity_types_entities.yaml  adobe_entities.yaml  ai_systems_entities.yaml  assessment_entities.yaml  audience_entities.yaml  character_archetypes_entities.yaml  cognitive_load_entities.yaml  content_architecture_entities.yaml  content_format_entities.yaml  delivery_entities.yaml  discourse_entities.yaml  evidence_types_entities.yaml  learning_objectives_entities.yaml  media_entities.yaml  narrative_entities.yaml  opening_hooks_entities.yaml  pedagogical_frameworks_entities.yaml  performance_entities.yaml  rhetorical_devices_entities.yaml  sales_entities.yaml  scoring_entities.yaml  slide_types_entities.yaml  stance_markers_entities.yaml  visual_elements_entities.yaml  writing_entities.yaml
Yamls/methodology/: ENRICHMENT_SUMMARY.md  activity_design_patterns.yaml  character_archetypes_patterns.yaml  cognitive_load_principles.yaml  complexity_framework.yaml  data_visualization_standards.yaml  discourse_markers_framework.yaml  discussion_based_learning_framework.yaml  editorial_standards.yaml  elevator_pitch_framework.yaml  evidence_types_framework.yaml  figure_references_framework.yaml  inclusion_standards.yaml  infographic_design_framework.yaml  learner_profiles_framework.yaml  learning_objectives_framework.yaml  mayer_principles.yaml  merrill_framework.yaml  microlearning_framework.yaml  monroes_motivated_sequence_framework.yaml  motion_physics_standards.yaml  multimodal_video_standards.yaml  narrative_resolution_framework.yaml  narrative_structures_framework.yaml  opening_hooks_framework.yaml  pedagogical_frameworks.yaml  pedagogical_patterns.yaml  pedagogical_pdl_framework.yaml  pedagogical_principles.yaml  pedagogical_profiles_framework.yaml  rhetorical_devices_framework.yaml  roleplay_scenario_framework.yaml  rst_framework.yaml  stance_markers_framework.yaml  strip_card_framework.yaml  style_guide_standards.yaml  (+4 more)
tests/: test_answering.py  test_app_status.py  test_chunking.py  test_claims_async.py  test_dense.py  test_eval.py  test_expansion.py  test_lancedb_store.py  test_llm_client.py  test_markdown.py  test_ontology_loader.py  test_query_pipeline.py  test_relations_async.py  test_rerank.py  test_scanner.py  test_settings_loader.py  test_sqlite_store.py
(+136 files in other folders)
